--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -22,17 +22,25 @@
           </div>
     
           <ul class="nav base_nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
-            <li><a href="#" class="nav-link px-2 link-secondary">Home</a></li>
-            <li><a href="#" class="nav-link px-2">Features</a></li>
-            <li><a href="#" class="nav-link px-2">Pricing</a></li>
-            <li><a href="#" class="nav-link px-2">FAQs</a></li>
-            <li><a href="#" class="nav-link px-2">About</a></li>
+            <li><a href="/" class="nav-link px-2 link-secondary">Головна</a></li>
+            <li><a href="{% url 'menu' %}" class="nav-link px-2">Меню</a></li>
+            <li><a href="#" class="nav-link px-2">Мої замовлення</a></li> 
           </ul>
-    
-          <div class="col-md-3 text-end">
-            <button type="button" class="btn btn-outline-primary me-2">Login</button>
-            <button type="button" class="btn btn-primary">Sign-up</button>
-          </div>
+            <div class="col-md-3 text-end">
+            {% if user.is_authenticated %}
+                <a href="/cart/" class="btn btn-outline-secondary me-2">
+                  <i class="bi bi-cart3"></i> <!-- Bootstrap icon -->
+               </a>
+                <a href="/profile/" class="btn btn-outline-secondary me-2">Профіль</a>
+                <a href="{%url 'logout'%}" class="btn btn-danger">Вийти</a>
+                
+            {% else %}
+      
+                  <a href="{%url 'login'%}" class="btn btn-outline-primary me-2">Login</a>
+                  <a href="{%url 'registration'%}" class="btn btn-primary">Sign-up </a>
+                
+            {% endif %}
+            </div>    
         </header>
       </div>
     
