--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="csrf-token" content="{{ csrf_token }}">
     <title>{% block title%}{% endblock title%}</title>
 
     {% comment %} bootstrap {% endcomment %}
@@ -28,9 +29,9 @@
           </ul>
             <div class="col-md-3 text-end">
             {% if user.is_authenticated %}
-                <a href="/cart/" class="btn btn-outline-secondary me-2">
-                  <i class="bi bi-cart3"></i> <!-- Bootstrap icon -->
-               </a>
+                <button id="open-cart" class="btn btn-outline-secondary me-2">
+                  <i class="bi bi-cart3"></i>
+                </button>
                 <a href="/profile/" class="btn btn-outline-secondary me-2">Профіль</a>
                 <a href="{%url 'logout'%}" class="btn btn-danger">Вийти</a>
                 
@@ -75,11 +76,18 @@
         </footer>
      </div>
 
+
+
+     <div id="cart-sidebar" class="cart-sidebar" style="display: none; position: fixed; top: 0; right: 0; width: 350px; height: 100vh; background: #fff; border-left: 1px solid #ccc; z-index: 1050; overflow-y: auto;">
+  <!-- Контент кошика вставиться тут -->
+      </div>
+
     
 
 
     {% comment %} js bootstrap {% endcomment %}
     <script src="{% static 'js/base.js' %}"></script>
+    <script src="{% static 'js/cart.js' %}"></script>
     <script src="{% static 'bootstrap/js/bootstrap.bundle.min.js' %}"></script>
 </body> 
 </html> 
