--- a/cart/templates/cart/cart.html
+++ b/cart/templates/cart/cart.html
@@ -40,7 +40,7 @@
   {% endif %}
 
   <div class="text-center mt-auto ">
-    <a href="#" class="btn btn-success w-100">
+    <a href="{%url 'checkout'%}" class="btn btn-success w-100">
       Оформити замовлення
     </a>
   </div>
