--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -13,7 +13,7 @@
     {% comment %} css {% endcomment %}
     <link rel="stylesheet" href="{% static 'css/base.css' %}">
 </head>
-<body>
+<body data-is-authenticated="{{ user.is_authenticated|yesno:'true,false' }}">
     <div class="head-container sticky-top">
         <header class="head d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-1 mb-4">
           <div class="col-md-3 mb-2 mb-md-0">
@@ -25,14 +25,18 @@
           <ul class="nav base_nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
             <li><a href="/" class="nav-link px-2 link-secondary">Головна</a></li>
             <li><a href="{% url 'menu' %}" class="nav-link px-2">Меню</a></li>
-            <li><a href="#" class="nav-link px-2">Мої замовлення</a></li> 
+            {% if user.is_authenticated %}
+              <a href="{% url 'order_history' %}" class="nav-link px-2">Мої замовлення</a>
+            {% else %}
+              <a href="{% url 'login' %}" class="nav-link px-2">Мої замовлення</a>
+            {% endif %}
           </ul>
             <div class="col-md-3 text-end">
             {% if user.is_authenticated %}
                 <button id="open-cart" class="btn btn-outline-secondary me-2">
                   <i class="bi bi-cart3"></i>
                 </button>
-                <a href="/profile/" class="btn btn-outline-secondary me-2">Профіль</a>
+                <a href="{%url 'profile'%}" class="btn btn-outline-secondary me-2">Профіль</a>
                 <a href="{%url 'logout'%}" class="btn btn-danger">Вийти</a>
                 
             {% else %}
@@ -52,8 +56,8 @@
 
     <hr class="featurette-divider">
 
-    <div class="foot-container">
-        <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 ">
+    <div class="foot-container ">
+        <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4  ">
           <div class="col-md-6 d-flex align-items-center">
             <a href="/" class="mb-3 me-2 mb-md-0 text-body-secondary text-decoration-none lh-1" aria-label="Bootstrap">
               <img src="{% static "img/main_logo.png" %}" width="50" height="50" aria-hidden="true" alt="">
