--- a/main/templates/main/index/index.html
+++ b/main/templates/main/index/index.html
@@ -5,6 +5,16 @@
 
 {% block content %}
 <link rel="stylesheet" href="{% static 'css/index.css' %}">
+{% if messages %}
+  <div class="container mt-3">
+    {% for message in messages %}
+      <div class="alert alert-{{ message.tags }} alert-dismissible fade show custom-flash-message" role="alert">
+        {{ message }}
+        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+      </div>
+    {% endfor %}
+  </div>
+{% endif %}
 <div id="myCarousel" class="carousel slide mb-6" data-bs-ride="carousel">
   <div class="carousel-indicators">
     <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="0" class="" aria-label="Slide 1"></button>
@@ -56,7 +66,6 @@
 
 <div class="container marketing">
 
-  <!-- Three columns of text below the carousel -->
   <div class="row">
     {% for restaurant in restaurants %}
     <div class="col-lg-4 text-center">
@@ -70,8 +79,6 @@
   </div>
 </div>
 
-
-  <!-- START THE FEATURETTES -->
 
   <hr class="featurette-divider">
 
@@ -130,7 +137,6 @@
     </div>
   </div>
 
-  <!-- /END THE FEATURETTES -->
 
 </div>
 <script src="{% static 'js/index.js' %}"></script>
