--- a/static/css/index.css
+++ b/static/css/index.css
@@ -1,8 +1,8 @@
 .marketing {
     max-width: 1200px;
-    margin: 10px auto; /* центрує */
+    margin: 10px auto; 
     padding: 50px 10px;
-    border-top: 1px solid #ccc; /* якщо потрібно розділення */
+    border-top: 1px solid #ccc; 
 }
 
 .marketing .col-lg-4 {
@@ -19,25 +19,25 @@
   .featurette-heading {
     font-family: 'Arial', sans-serif;
     font-weight: 600;
-    font-size: 2.5rem; /* Збільшити розмір заголовка */
+    font-size: 2.5rem; 
     line-height: 1.2;
     color: #333;
     text-transform: uppercase;
-    margin-bottom: 1rem; /* Відступ знизу */
-    max-width: 90%; /* Обмежує ширину тексту */
-    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2); /* Додає тінь */
+    margin-bottom: 1rem; 
+    max-width: 90%; 
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2); 
     margin-top: 1.5rem;
   }
   
-  /* Стилі для основного тексту */
+ 
   .featurette .lead {
     font-family: 'Verdana', sans-serif;
     font-size: 1.125rem;
     color: #666;
     line-height: 1.6;
     margin-bottom: 1.5rem;
-    max-width: 90%; /* Обмежує ширину основного тексту */
-    text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.3); /* Додає тінь */
+    max-width: 90%; 
+    text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.3); 
     margin-top: 1.5rem;
   }
 
@@ -71,7 +71,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgba(0, 0, 0, 0.4); /* затемнення */
+  background: rgba(0, 0, 0, 0.4); 
   z-index: 1;
 }
 
@@ -88,12 +88,45 @@
 
 .fade-in {
   opacity: 0;
-  transform: translateY(30px); /* Потрібно для анімації */
+  transform: translateY(30px); 
   transition: opacity 1s ease, transform 1s ease;
 }
 
-/* Стан після активації анімації */
+
 .fade-in.show {
   opacity: 1;
   transform: translateY(0);
+}
+
+
+
+
+
+
+
+.custom-flash-message {
+    position: fixed;
+    top: 20px;
+    right: 20px;
+    max-width: 400px;
+    z-index: 9999;
+
+    padding: 16px 48px 16px 20px; 
+    box-shadow: 0 4px 12px rgba(0,0,0,0.15);
+    border-radius: 8px;
+
+    animation: fadeInOut 4s ease-in-out forwards;
+}
+
+.custom-flash-message .btn-close {
+    position: absolute;
+    top: 12px;
+    right: 12px;
+}
+
+@keyframes fadeInOut {
+    0% { opacity: 0; transform: translateY(-10px); }
+    10% { opacity: 1; transform: translateY(0); }
+    90% { opacity: 1; transform: translateY(0); }
+    100% { opacity: 0; transform: translateY(-10px); }
 }
