--- a/main/templates/main/index/index.html
+++ b/main/templates/main/index/index.html
@@ -6,7 +6,7 @@
 {% block content %}
 <link rel="stylesheet" href="{% static 'css/index.css' %}">
 {% if messages %}
-  <div class="container mt-3">
+  <div class="container">
     {% for message in messages %}
       <div class="alert alert-{{ message.tags }} alert-dismissible fade show custom-flash-message" role="alert">
         {{ message }}
