--- a/static/css/ckeckout.css
+++ b/static/css/ckeckout.css
@@ -50,3 +50,11 @@
     90% { opacity: 1; transform: translateY(0); }
     100% { opacity: 0; transform: translateY(-10px); }
 }
+
+
+#map {
+    height: 400px;
+    width: 750px; 
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
